# NarMusic

./: .gitignore  CMakeLists.txt  README.md  build.config  build.sh  config.json  teat.cpp  test.cpp  test.html  toolchain-aarch64.cmake  评估.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  PreventInSourceBuild.cmake  Version.cmake
include/: pch.h
include/gumbo-parser/: gumbo.h  tag_enum.h
include/narnat/: bili_searcher.h  http_request.h  http_server.h  lyrics_encapsulator.h  music_analysis.h  stream_send.h  task_manger.h
lib/: libgsasl.so.7  libgumbo.so.3.0.0
lib/x86_64/: libgsasl.so.7.10.0  libgumbo.so.2.0.1  libtag.so.2.1.1
service/: send.py  service.sh  start.sh  users.conf
src/: bili_searcher.cpp  http_request.cpp  http_request.h  http_server.cpp  http_server.h  lyrics_encapsulator.cpp  main.cpp  music_analysis.cpp  music_analysis.h  stream_send.cpp  task_manger.cpp  task_manger.h
src/application/: download_service.cpp  download_service.h  library_service.cpp  library_service.h  search_service.cpp  search_service.h  streaming_service.cpp  streaming_service.h
src/config/: config.cpp  config.h
src/core/: epoll_server.cpp  epoll_server.h  logger.cpp  logger.h  rate_limiter.cpp  rate_limiter.h
src/core/http/: request.cpp  request.h  response.cpp  response.h  router.cpp  router.h
src/domain/: music_library_entry.h  music_metadata.h  task.cpp  task.h
src/domain/repository/: iaudio_downloader.h  ibilibili_client.h  ilyrics_aggregator.h  music_file_repository.h  music_library_repository.h  task_repository.h
src/infrastructure/audio/: audio_downloader.cpp  audio_downloader.h
src/infrastructure/auth/: protection_service.h
src/infrastructure/bilibili/: bilibili_client.cpp  bilibili_client.h
src/infrastructure/filesystem/: music_file_repository.cpp  music_file_repository.h  zip_writer.cpp  zip_writer.h
src/infrastructure/http_client/: curl_client.cpp  curl_client.h
src/infrastructure/lyrics/: kugou_provider.cpp  kugou_provider.h  lyrics_aggregator.cpp  lyrics_aggregator.h  lyrics_provider.h  netease_provider.cpp  netease_provider.h  qishui_provider.cpp  qishui_provider.h  qqmusic_provider.cpp  qqmusic_provider.h
src/infrastructure/notification/: email_sender.cpp  email_sender.h
src/infrastructure/persistence/: database.cpp  database.h  sqlite_common.h  sqlite_music_library_repository.cpp  sqlite_music_library_repository.h  sqlite_task_repository.cpp  sqlite_task_repository.h
src/infrastructure/streaming/: stream_sender.cpp  stream_sender.h
src/infrastructure/tunnel/: cpolar_tunnel.cpp  cpolar_tunnel.h
src/presentation/controllers/: download_controller.cpp  download_controller.h  library_controller.cpp  library_controller.h  search_controller.cpp  search_controller.h
src/presentation/middleware/: static_file_handler.cpp  static_file_handler.h
web/: index.html
web/app/: api.js  app.js  main.js  state.js  utils.js
web/app/components/: tabs.js
web/app/modules/: batch.js  download.js  library.js  lyrics.js  player.js  search.js  settings.js
web/css/: style.css
web/js/: app.js
www/: index.html  test.txt
